<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/tv_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_text"/>
        <CheckBox
                android:text="@string/vegetable_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vegetable_1"/>
        <CheckBox
                android:text="@string/vegetable_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vegetable_2"/>
        <CheckBox
                android:text="@string/vegetable_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vegetable_3"/>
        <CheckBox
                android:text="@string/vegetable_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vegetable_4"/>
        <CheckBox
                android:text="@string/vegetable_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vegetable_5"/>
        <CheckBox
                android:text="@string/vegetable_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vegetable_6"/>
        <Button
                android:text="@string/b_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/b_save"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>